--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 application.title=LNJ-Shell
 application.version=1.0.0
 spring.main.allow-circular-references=true
-logging.level.root=off
+#logging.level.root=off
